
	* src/cliques.c (igraph_cliques) : max_size=0 means no limit and
	not the largest cliques
	(igraph_largest_cliques) : added
	(igraph_independent_vertex_sets) : max_size=0 means no limit and
	not the largest cliques
	(igraph_largest_independent_vertex_sets) : added

	* examples/simple/igraph_independent_sets.c : updated
	* examples/simple/igraph_cliques.c : updated

2007-01-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cliques.c (igraph_i_cliques) : bug corrected

2007-01-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/cliques.c (igraph_cliques, igraph_independent_vertex_sets)
	(igraph_maximal_cliques, igraph_maximal_independent_vertex_sets)
	(igraph_clique_number, igraph_independence_number) : added

	* src/igraph_set.c : added

	* src/adjlist.c (igraph_i_adjlist_sort)
	(igraph_i_adjlist_init_complementer) : added

	* tests/cliques.at : added

2006-12-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cores.c (igraph_kcores) : added

2006-12-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_connect_neighborhood) : added
	(igraph_lattice) : 'nei' argument implemented

	* src/games.c (igraph_rewire_edges, igraph_watts_strogatz_game) : added

	* src/structure_generators.c (igraph_connect_neighorhood) : two bugs
	corrected

	* src/games.c (igraph_rewire_edges, igraph_watts_strogatz_game) : 
	argument checks added

	* src/structure_generators.c (igraph_connect_neigborhood) : bug
	corrected. Really.
	
2006-12-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/games.c (igraph_preference_game)
	(igraph_asymmetric_preference_game) : the types of the generated
	vertices can now be returned.
	* interfaces/python/src/graphobject.c (igraphmodule_Graph_Preference)
	(igraphmodule_Graph_Asymmetric_Preference) : added attribute argument
	to store vertex types in the given attribute
	* interfaces/python/src/edgeseqobject.c,
	interfaces/python/src/vertexseqobject.c : mass assignment of attributes
	are now supported