@@ -30,11 +30,127 @@ void igraph_i_cliques_free_res(igraph_vector_ptr_t *res) {
   long i, n;
   
   n = igraph_vector_ptr_size(res);
-  for (i=0; i<n; i++) { 
-    igraph_vector_destroy(VECTOR(*res)[i]);
-    igraph_free(VECTOR(*res)[i]);
+  for (i=0; i<n; i++) {
+    if (VECTOR(*res)[i] != 0) {
+      igraph_vector_destroy(VECTOR(*res)[i]);
+      igraph_free(VECTOR(*res)[i]);
+    }
   }
+  igraph_vector_ptr_clear(res);
 }
+
+int igraph_i_find_k_cliques(const igraph_t *graph,
+			    long int size,
+			    const igraph_real_t *member_storage,
+			    igraph_real_t **new_member_storage,
+			    long int old_clique_count,
+			    long int *clique_count,
+			    igraph_vector_t *neis,
+			    igraph_bool_t independent_vertices) {
+
+  long int j, k, l, m, n;
+  const igraph_real_t *c1, *c2;
+  igraph_real_t v1, v2;
+  igraph_bool_t ok;
+  
+  /* Allocate the storage */
+  *new_member_storage=Realloc(*new_member_storage, 
+			      size*old_clique_count*(old_clique_count-1)/2,
+			      igraph_real_t);
+  if (*new_member_storage == 0) {
+    IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_free, *new_member_storage);
+
+  m=n=0;
+  
+  /* Now consider all pairs of i-1-cliques and see if they can be merged */
+  for (j=0; j<old_clique_count; j++) {
+    for (k=j+1; k<old_clique_count; k++) {
+      IGRAPH_ALLOW_INTERRUPTION();
+        
+      /* Since cliques are represented by their vertex indices in increasing
+       * order, two cliques can be merged iff they have exactly the same
+       * indices excluding one AND there is an edge between the two different
+       * vertices */
+      c1 = member_storage+j*(size-1);
+      c2 = member_storage+k*(size-1);
+      /* Find the longest prefixes of c1 and c2 that are equal */
+      for (l=0; l<size-1 && c1[l] == c2[l]; l++)
+	(*new_member_storage)[m++]=c1[l];
+      /* Now, if l == size-1, the two vectors are totally equal.
+	 This is a bug */
+      if (l == size-1) {
+	IGRAPH_WARNING("possible bug in igraph_cliques");
+	m=n;
+      } else {
+	/* Assuming that j<k, c1[l] is always less than c2[l], since cliques
+	 * are ordered alphabetically. Now add c1[l] and store c2[l] in a
+	 * dummy variable */
+	(*new_member_storage)[m++]=c1[l];
+	v1=c1[l];
+	v2=c2[l];
+	l++;
+	/* Copy the remaining part of the two vectors. Every member pair
+	 * found in the remaining parts satisfies the following:
+	 * 1. If they are equal, they should be added.
+	 * 2. If they are not equal, the smaller must be equal to the
+	 *    one stored in the dummy variable. If not, the two vectors
+	 *    differ in more than one place. The larger will be stored in
+	 *    the dummy variable again.
+	 */
+	ok=1;
+	for (; l<size-1; l++) {
+	  if (c1[l] == c2[l]) {
+	    (*new_member_storage)[m++]=c1[l];
+	    ok=0;
+	  } else if (ok) {
+	    if (c1[l] < c2[l]) {
+	      if (c1[l] == v1) {
+		(*new_member_storage)[m++]=c1[l];
+		v2 = c2[l];
+	      } else break;
+	    } else {
+	      if (ok && c2[l] == v1) {
+		(*new_member_storage)[m++]=c2[l];
+		v2 = c1[l];
+	      } else break;
+	    }
+	  } else break;
+	}
+	/* Now, if l != size-1, the two vectors had a difference in more than
+	 * one place, so the whole clique is invalid. */
+	if (l != size-1) {
+	  /* Step back in new_member_storage */
+	  m=n;
+	} else {
+	  /* v1 and v2 are the two different vertices. Check for an edge
+	   * if we are looking for cliques and check for the absence of an
+	   * edge if we are looking for independent vertex sets */
+	  IGRAPH_CHECK(igraph_neighbors(graph, neis, v1, IGRAPH_ALL));
+	  l=igraph_vector_search(neis, 0, v2, 0);
+	  if ((l && !independent_vertices) || (!l && independent_vertices)) {
+	    /* Found a new clique, step forward in new_member_storage */
+	    if (m==n || v2>(*new_member_storage)[m-1]) {
+	      (*new_member_storage)[m++]=v2;
+	      n=m;
+	    } else {
+	      m=n;
+	    }
+	  } else {
+	    m=n;
+	  }
+	}
+      }
+    }
+  }
+
+  /* Calculate how many cliques have we found */
+  *clique_count = n/size;
+  
+  IGRAPH_FINALLY_CLEAN(1);
+  return 0;
+}  
 
 /* Internal function for calculating cliques or independent vertex sets.
  * They are practically the same except that the complementer of the graph
@@ -43,225 +159,105 @@ void igraph_i_cliques_free_res(igraph_vector_ptr_t *res) {
 int igraph_i_cliques(const igraph_t *graph, igraph_vector_ptr_t *res,
 		     igraph_integer_t min_size, igraph_integer_t max_size,
 		     igraph_bool_t independent_vertices) {
-  igraph_bool_t only_largest = 0, reached_largest = 0;
+
   igraph_integer_t no_of_nodes;
-  igraph_vector_t *new_cliques=0, neis;
-  igraph_real_t *member_storage, *new_member_storage, *c1, *c2, v1, v2;
-  igraph_bool_t ok;
-  long int i, j, k, l, m, n, clique_count, old_clique_count;
+  igraph_vector_t neis;
+  igraph_real_t *member_storage=0, *new_member_storage, *c1;
+  long int i, j, k, clique_count, old_clique_count;
   
   no_of_nodes = igraph_vcount(graph);
   
-  if (min_size <= 0) min_size = 0;
-  if (max_size < 0) max_size = no_of_nodes;
-  if (max_size == 0) {
-    max_size = no_of_nodes; only_largest = 1;
-  }
+  if (min_size < 0) { min_size = 0; }
+  if (max_size > no_of_nodes || max_size <= 0) { max_size = no_of_nodes; }
 
   igraph_vector_ptr_clear(res);
   
-  /* Empty graphs have no cliques */
-  if (no_of_nodes == 0) return 0;
-  
   IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
-  
-  /* Find all 1-cliques: every vertex will be a clique */
-  member_storage=Calloc(no_of_nodes, igraph_real_t);
+  igraph_vector_ptr_clear(res);
+  IGRAPH_FINALLY(igraph_i_cliques_free_res, res);
+    
+  /* Will be resized later, if needed. */
+  member_storage=Calloc(1, igraph_real_t);
   if (member_storage==0) {
     IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
   }
   IGRAPH_FINALLY(igraph_free, member_storage);
   
-  for (i=0; i<no_of_nodes; i++) {
-    member_storage[i] = i;
-  }
-  clique_count = no_of_nodes;
-  old_clique_count = 0;
-  
-  new_member_storage = Calloc(clique_count*(clique_count-1), igraph_real_t);
+  /* Find all 1-cliques: every vertex will be a clique */
+  new_member_storage=Calloc(no_of_nodes, igraph_real_t);
   if (new_member_storage==0) {
     IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
   }
   IGRAPH_FINALLY(igraph_free, new_member_storage);
-
-  igraph_vector_ptr_clear(res);
-  IGRAPH_FINALLY(igraph_i_cliques_free_res, res);
   
-  for (i=2; i<=max_size+1; i++) {
-    IGRAPH_ALLOW_INTERRUPTION();
+  for (i=0; i<no_of_nodes; i++) {
+    new_member_storage[i] = i;
+  }
+  clique_count = no_of_nodes;
+  old_clique_count = 0;
 
-    /* First, let's take i-1-cliques and copy them to the result vector if
-     * necessary */    
-    if (only_largest && clique_count==0) {
-      /* So we had no more cliques. If that is the case, new_cliques (which has
-       * been swapped with cliques at the end of the previous iteration)
-       * contains the largest cliques. Swap them again so they will be returned. */
-      c1 = new_member_storage;
-      new_member_storage = member_storage;
-      member_storage = c1;
-      reached_largest = 1;
-      clique_count = old_clique_count;
-      i--;
-    }
-
-    /* If we reached the largest and collected all that needed */
-    if (!only_largest && clique_count==0) {
-      break;
-    }
-
-    /* If we had cliques AND (we requested cliques of this size OR
-     * we requested for the largest and we have reached them) */
-    if (clique_count>0 &&
-        ((!only_largest && (i >= min_size+1 && i <= max_size+1))
-	 || reached_largest)) {
-      if (new_cliques != 0) {
-	igraph_free(new_cliques);
-	new_cliques=0;
-	IGRAPH_FINALLY_CLEAN(1);
+  /* Add size 1 cliques if requested */
+  if (min_size <= 1) {
+    IGRAPH_CHECK(igraph_vector_ptr_resize(res, no_of_nodes));
+    igraph_vector_ptr_null(res);
+    for (i=0; i<no_of_nodes; i++) {
+      igraph_vector_t *p=Calloc(1, igraph_vector_t);
+      if (p==0) {
+	IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
       }
-      new_cliques = Calloc(clique_count, igraph_vector_t);
-      if (new_cliques == 0) {
-        IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
-      }
-      IGRAPH_FINALLY(igraph_free, new_cliques);
-      
-      /*
-      printf("%d-clique storage vector:\n", (int)(i-1));
-      for (j=0; j<clique_count*(i-1); j++) {
-        printf("%d ", (int)member_storage[j]);
-        if (j % (i-1) == (i-2)) printf("\n");
-      }
-      */
-      
-      for (j=0, k=0; j<clique_count; j++, k+=i-1) {
-        IGRAPH_CHECK(igraph_vector_init_copy(&new_cliques[j], &member_storage[k], i-1));
-      }
-
-      for (j=0; j<clique_count; j++) {
-	igraph_vector_t *tmp=Calloc(1, igraph_vector_t);
-	*tmp=new_cliques[j];
-        IGRAPH_CHECK(igraph_vector_ptr_push_back(res, tmp));
-      }
-      
-      if (reached_largest) break;
-    }
-    
-    if (i==max_size+1) break;
-    
-    /* Find all i-cliques, provided that i-1-cliques are in clique_candidates */
-    
-    /* First, allocate memory for the new clique sets. If there are n
-     * i-1-cliques, the amount of memory needed will be i*n*(n-1)/2: there will
-     * be at most n*(n-1)/2 cliques with i members each */
-    new_member_storage = Realloc(new_member_storage,
-                                 i*clique_count*(clique_count-1)/2,
-                                 igraph_real_t);
-    if (new_member_storage==0) {
-      IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
-    }
-    m=n=0;
-    
-    /* Now consider all pairs of i-1-cliques and see if they can be merged */
-    for (j=0; j<clique_count; j++) {
-      for (k=j+1; k<clique_count; k++) {
-        IGRAPH_ALLOW_INTERRUPTION();
-        
-        /* Since cliques are represented by their vertex indices in increasing
-         * order, two cliques can be merged iff they have exactly the same
-         * indices excluding one AND there is an edge between the two different
-         * vertices */
-        c1 = member_storage+j*(i-1);
-        c2 = member_storage+k*(i-1);
-        /* Find the longest prefixes of c1 and c2 that are equal */
-        for (l=0; l<i-1 && c1[l] == c2[l]; l++)
-          new_member_storage[m++]=c1[l];
-        /* Now, if l == i-1, the two vectors are totally equal. This is a bug */
-        if (l == i-1) {
-          IGRAPH_WARNING("possible bug in igraph_cliques");
-          m=n;
-        } else {
-          /* Assuming that j<k, c1[l] is always less than c2[l], since cliques
-           * are ordered alphabetically. Now add c1[l] and store c2[l] in a
-           * dummy variable */
-          new_member_storage[m++]=c1[l];
-          v1=c1[l];
-          v2=c2[l];
-          l++;
-          /* Copy the remaining part of the two vectors. Every member pair
-           * found in the remaining parts satisfies the following:
-           * 1. If they are equal, they should be added.
-           * 2. If they are not equal, the smaller must be equal to the
-           *    one stored in the dummy variable. If not, the two vectors
-           *    differ in more than one place. The larger will be stored in
-           *    the dummy variable again.
-           */
-          ok=1;
-          for (; l<i-1; l++) {
-            if (c1[l] == c2[l]) {
-              new_member_storage[m++]=c1[l];
-              ok=0;
-            } else if (ok) {
-              if (c1[l] < c2[l]) {
-                if (c1[l] == v1) {
-                  new_member_storage[m++]=c1[l];
-                  v2 = c2[l];
-                } else break;
-              } else {
-                if (ok && c2[l] == v1) {
-                  new_member_storage[m++]=c2[l];
-                  v2 = c1[l];
-                } else break;
-              }
-            } else break;
-          }
-          /* Now, if l != i-1, the two vectors had a difference in more than
-           * one place, so the whole clique is invalid. */
-          if (l != i-1) {
-            /* Step back in new_member_storage */
-            m=n;
-          } else {
-            /* v1 and v2 are the two different vertices. Check for an edge
-	     * if we are looking for cliques and check for the absence of an
-	     * edge if we are looking for independent vertex sets */
-            IGRAPH_CHECK(igraph_neighbors(graph, &neis, v1, IGRAPH_ALL));
-	    l=igraph_vector_search(&neis, 0, v2, 0);
-            if ((l && !independent_vertices) || (!l && independent_vertices)) {
-              /* Found a new clique, step forward in new_member_storage */
-              if (m==n || v2>new_member_storage[m-1]) {
-                new_member_storage[m++]=v2;
-                n=m;
-              } else {
-                m=n;
-              }
-            } else {
-              m=n;
-            }
-          }
-        }
-      }
-    }
-
-    if (new_cliques != 0) {
-      igraph_free(new_cliques);
+      IGRAPH_FINALLY(igraph_free, p);
+      IGRAPH_CHECK(igraph_vector_init(p, 1));
+      VECTOR(*p)[0]=i;
+      VECTOR(*res)[i]=p;
       IGRAPH_FINALLY_CLEAN(1);
-      new_cliques=0;
+    }
+  }      
+
+  for (i=2; i<=max_size && clique_count > 1; i++) {
+
+    /* Here new_member_storage contains the cliques found in the previous
+       iteration. Save this into member_storage, might be needed later  */
+
+    c1=member_storage;
+    member_storage=new_member_storage;
+    new_member_storage=c1;
+    old_clique_count=clique_count;
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    /* Calculate the cliques */
+    
+    IGRAPH_FINALLY_CLEAN(2);
+    IGRAPH_CHECK(igraph_i_find_k_cliques(graph, i, member_storage,
+					 &new_member_storage,
+					 old_clique_count,
+					 &clique_count,
+					 &neis,
+					 independent_vertices));
+    IGRAPH_FINALLY(igraph_free, member_storage);
+    IGRAPH_FINALLY(igraph_free, new_member_storage);
+    
+    /* Add the cliques just found to the result if requested */
+    if (i>=min_size && i<=max_size) {
+      for (j=0, k=0; j<clique_count; j++, k+=i) {
+	igraph_vector_t *p=Calloc(1, igraph_vector_t);
+	if (p==0) {
+	  IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
+	}
+	IGRAPH_FINALLY(igraph_free, p);
+	IGRAPH_CHECK(igraph_vector_init_copy(p, &new_member_storage[k], i));
+	IGRAPH_FINALLY(igraph_vector_destroy, p);
+	IGRAPH_CHECK(igraph_vector_ptr_push_back(res, p));
+	IGRAPH_FINALLY_CLEAN(2);
+      }
     }
     
-    /* Now all i-cliques are in new_member_storage. Swap it with
-     * member_storage */
-    c1 = new_member_storage;
-    new_member_storage = member_storage;
-    member_storage = c1;
-    
-    /* Calculate how many cliques have we found */
-    old_clique_count = clique_count;
-    clique_count = n/i;
-  }    
-
-  igraph_free(new_member_storage);
+  } /* i <= max_size && clique_count != 0 */
+  
   igraph_free(member_storage);
+  igraph_free(new_member_storage);
   igraph_vector_destroy(&neis);
-  IGRAPH_FINALLY_CLEAN(4); /* 3 here, +1 is igraph_i_cliques_free_res */
+  IGRAPH_FINALLY_CLEAN(4); /* 2 here, +1 is igraph_i_cliques_free_res */
   
   return 0;
 }
@@ -293,10 +289,95 @@ int igraph_i_cliques(const igraph_t *graph, igraph_vector_ptr_t *res,
  */
 int igraph_cliques(const igraph_t *graph, igraph_vector_ptr_t *res,
                    igraph_integer_t min_size, igraph_integer_t max_size) {
-  if (max_size == 0) {
-    max_size=-1;
-  }
   return igraph_i_cliques(graph, res, min_size, max_size, 0);
+}
+
+int igraph_i_largest_cliques(const igraph_t *graph, igraph_vector_ptr_t *res,
+			     igraph_bool_t independent_vertices) {
+  
+  igraph_integer_t no_of_nodes;
+  igraph_vector_t neis;
+  igraph_real_t *member_storage=0, *new_member_storage, *c1;
+  long int i, j, k, clique_count, old_clique_count;
+
+  no_of_nodes = igraph_vcount(graph);
+
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  igraph_vector_ptr_clear(res);
+  IGRAPH_FINALLY(igraph_i_cliques_free_res, res);
+
+  /* Will be resized later, if needed. */
+  member_storage=Calloc(1, igraph_real_t);
+  if (member_storage==0) {
+    IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_free, member_storage);
+
+  new_member_storage=Calloc(no_of_nodes, igraph_real_t);
+  if (new_member_storage==0) {
+    IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_free, new_member_storage);
+  
+  for (i=0; i<no_of_nodes; i++) {
+    new_member_storage[i] = i;
+  }
+  clique_count = no_of_nodes;
+  old_clique_count = 0;
+
+  for (i=2; i<=no_of_nodes && clique_count > 1; i++) {
+    
+    c1=member_storage;
+    member_storage=new_member_storage;
+    new_member_storage=c1;
+    old_clique_count=clique_count;
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    /* Calculate the cliques */
+    
+    IGRAPH_FINALLY_CLEAN(2);
+    IGRAPH_CHECK(igraph_i_find_k_cliques(graph, i, member_storage,
+					 &new_member_storage,
+					 old_clique_count,
+					 &clique_count,
+					 &neis,
+					 independent_vertices));
+    IGRAPH_FINALLY(igraph_free, member_storage);
+    IGRAPH_FINALLY(igraph_free, new_member_storage);
+
+  }
+
+  /* Where is the result? */
+  if (clique_count != 0) {
+    c1=new_member_storage;
+    i=no_of_nodes;
+  } else {
+    c1=member_storage;
+    i=i-2;
+    clique_count=old_clique_count;
+  }
+  /* Ok, the result is in c1, there are clique_count cliques and
+     i is the size of the cliques
+  */
+  for (j=0, k=0; j<clique_count; j++, k+=i) {
+    igraph_vector_t *p=Calloc(1, igraph_vector_t);
+    if (p==0) {
+      IGRAPH_ERROR("cliques failed", IGRAPH_ENOMEM);
+    }
+    IGRAPH_FINALLY(igraph_free, p);
+    IGRAPH_CHECK(igraph_vector_init_copy(p, &c1[k], i));
+    IGRAPH_FINALLY(igraph_vector_destroy, p);
+    IGRAPH_CHECK(igraph_vector_ptr_push_back(res, p));
+    IGRAPH_FINALLY_CLEAN(2);
+  }
+
+  igraph_free(member_storage);
+  igraph_free(new_member_storage);
+  igraph_vector_destroy(&neis);
+  IGRAPH_FINALLY_CLEAN(4); /* 2 here, +1 is igraph_i_cliques_free_res */
+  
+  return 0;
 }
 
 /**
@@ -321,8 +402,9 @@ int igraph_cliques(const igraph_t *graph, igraph_vector_ptr_t *res,
  */
 
 int igraph_largest_cliques(const igraph_t *graph, igraph_vector_ptr_t *res) {
-  return igraph_i_cliques(graph, res, 0, 0, 0);
+  return igraph_i_largest_cliques(graph, res, 0);
 }
+
 
 /**
  * \function igraph_independent_vertex_sets
@@ -356,9 +438,6 @@ int igraph_independent_vertex_sets(const igraph_t *graph,
 				   igraph_vector_ptr_t *res,
 				   igraph_integer_t min_size,
 				   igraph_integer_t max_size) {
-  if (max_size==0) {
-    max_size=-1;
-  }
   return igraph_i_cliques(graph, res, min_size, max_size, 1);
 }
 
@@ -381,7 +460,7 @@ int igraph_independent_vertex_sets(const igraph_t *graph,
 
 int igraph_largest_independent_vertex_sets(const igraph_t *graph,
 					   igraph_vector_ptr_t *res) {
-  return igraph_i_cliques(graph, res, 0, 0, 1);
+  return igraph_i_largest_cliques(graph, res, 1);
 }
 
 typedef struct igraph_i_max_ind_vsets_data_t {
